--- a/DrStone-main/src/main/resources/view/log-in-view.fxml
+++ b/DrStone-main/src/main/resources/view/log-in-view.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
    <children>
-      <AnchorPane layoutX="400.0" layoutY="130.0" prefHeight="360.0" prefWidth="400.0" styleClass="login" stylesheets="@color.css">
+      <AnchorPane layoutX="400.0" layoutY="130.0" prefHeight="360.0" prefWidth="400.0" styleClass="login" stylesheets="@style.css">
          <children>
             <VBox layoutX="50.0" layoutY="68.1015625" spacing="30.0">
                <children>
@@ -44,7 +44,7 @@
          <font>
             <Font size="24.0" />
          </font></Text>
-      <Button fx:id="loginButton" alignment="CENTER" contentDisplay="CENTER" layoutX="525.0" layoutY="464.0" mnemonicParsing="false" onMouseClicked="#validateUser" prefHeight="40.0" prefWidth="150.0" stylesheets="@color.css" text="Login">
+      <Button fx:id="loginButton" alignment="CENTER" contentDisplay="CENTER" layoutX="525.0" layoutY="464.0" mnemonicParsing="false" onMouseClicked="#validateUser" prefHeight="40.0" prefWidth="150.0" stylesheets="@style.css" text="Login">
          <font>
             <Font size="24.0" />
          </font>
