--- a/DrStone-main/src/main/resources/view/mini-game-diff-3-view.fxml
+++ b/DrStone-main/src/main/resources/view/mini-game-diff-3-view.fxml
@@ -152,7 +152,7 @@
                            </font></Label>
                      </children>
                   </GridPane>
-                  <Button alignment="CENTER" mnemonicParsing="false" onAction="#playAgain" prefHeight="50.0" prefWidth="150.0" stylesheets="@color.css" text="Play Again">
+                  <Button alignment="CENTER" mnemonicParsing="false" onAction="#playAgain" prefHeight="50.0" prefWidth="150.0" stylesheets="@style.css" text="Play Again">
                      <font>
                         <Font size="24.0" />
                      </font></Button>
