--- a/DrStone-main/src/main/resources/view/mini-game-menu-view.fxml
+++ b/DrStone-main/src/main/resources/view/mini-game-menu-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="650.0" prefWidth="1200.0" stylesheets="@color.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MiniGameMenuController">
+<AnchorPane prefHeight="650.0" prefWidth="1200.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MiniGameMenuController">
    <children>
       <Text layoutX="437.0" layoutY="175.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Difficulty">
          <font>
@@ -15,17 +15,17 @@
       </Text>
       <VBox layoutX="450.0" layoutY="250.0" spacing="50.0">
          <children>
-            <Button fx:id="easyModeButton" mnemonicParsing="false" onMouseClicked="#goToEasyMode" prefHeight="50.0" prefWidth="300.0" stylesheets="@color.css" text="Easy">
+            <Button fx:id="easyModeButton" mnemonicParsing="false" onMouseClicked="#goToEasyMode" prefHeight="50.0" prefWidth="300.0" stylesheets="@style.css" text="Easy">
                <font>
                   <Font size="24.0" />
                </font>
             </Button>
-            <Button fx:id="mediumModeButton" mnemonicParsing="false" onMouseClicked="#goToMediumMode" prefHeight="50.0" prefWidth="300.0" stylesheets="@color.css" text="Medium">
+            <Button fx:id="mediumModeButton" mnemonicParsing="false" onMouseClicked="#goToMediumMode" prefHeight="50.0" prefWidth="300.0" stylesheets="@style.css" text="Medium">
                <font>
                   <Font size="24.0" />
                </font>
             </Button>
-            <Button fx:id="hardModeButton" mnemonicParsing="false" onMouseClicked="#goToHardMode" prefHeight="50.0" prefWidth="300.0" stylesheets="@color.css" text="Hard">
+            <Button fx:id="hardModeButton" mnemonicParsing="false" onMouseClicked="#goToHardMode" prefHeight="50.0" prefWidth="300.0" stylesheets="@style.css" text="Hard">
                <font>
                   <Font size="24.0" />
                </font>
