--- a/DrStone-main/src/main/resources/view/sign-up-view.fxml
+++ b/DrStone-main/src/main/resources/view/sign-up-view.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SignUpController">
     <children>
-        <AnchorPane layoutX="367.0" layoutY="145.0" prefHeight="360.0" prefWidth="400.0" styleClass="login" stylesheets="@color.css">
+        <AnchorPane layoutX="367.0" layoutY="145.0" prefHeight="360.0" prefWidth="400.0" styleClass="login" stylesheets="@style.css">
             <children>
             <VBox layoutX="50.0" layoutY="63.0" spacing="30.0">
                <children>
@@ -38,7 +38,7 @@
             </VBox>
             </children>
         </AnchorPane>
-        <Button fx:id="signUpButton" layoutX="492.0" layoutY="488.0" mnemonicParsing="false" onMouseClicked="#registerUser" prefHeight="40.0" prefWidth="150.0" stylesheets="@color.css" text="Sign Up">
+        <Button fx:id="signUpButton" layoutX="492.0" layoutY="488.0" mnemonicParsing="false" onMouseClicked="#registerUser" prefHeight="40.0" prefWidth="150.0" stylesheets="@style.css" text="Sign Up">
          <font>
             <Font size="24.0" />
          </font>
