--- a/DrStone-main/src/main/resources/view/stone-category-view.fxml
+++ b/DrStone-main/src/main/resources/view/stone-category-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<ScrollPane prefHeight="650.0" prefWidth="1200.0" stylesheets="@color.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CategoryController">
+<ScrollPane prefHeight="650.0" prefWidth="1200.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CategoryController">
    <content>
       <AnchorPane prefHeight="1200.0" prefWidth="1200.0">
          <children>
