--- a/DrStone-main/src/main/resources/view/stone-view.fxml
+++ b/DrStone-main/src/main/resources/view/stone-view.fxml
@@ -1,65 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.SVGPath?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<ScrollPane hbarPolicy="NEVER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane hbarPolicy="NEVER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StoneController">
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1200.0" prefWidth="1200.0">
          <children>
-            <VBox layoutX="400.0" layoutY="35.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <GridPane alignment="CENTER" layoutX="400.0" layoutY="56.0" vgap="20.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="400.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
-                  <ImageView fitHeight="150.0" fitWidth="274.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/Marmer.jpg" />
-                     </image>
-                     <VBox.margin>
-                        <Insets left="550.0" top="30.0" />
-                     </VBox.margin>
-                  </ImageView>
-                  <AnchorPane prefHeight="50.0" prefWidth="400.0" styleClass="anchorPanes" stylesheets="@color.css">
+                  <ImageView fx:id="stoneImage" fitHeight="150.0" fitWidth="274.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <AnchorPane prefHeight="50.0" prefWidth="400.0" styleClass="anchorPanes" stylesheets="@style.css" GridPane.rowIndex="1">
                      <children>
                         <Text layoutX="14.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nama :">
                            <font>
                               <Font size="15.0" />
                            </font>
                         </Text>
-                        <Text layoutX="76.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                        <Text fx:id="stoneName" layoutX="76.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
                            <font>
                               <Font size="15.0" />
                            </font>
                         </Text>
                      </children>
-                     <VBox.margin>
-                        <Insets left="400.0" right="400.0" />
-                     </VBox.margin>
                   </AnchorPane>
-                  <AnchorPane prefHeight="50.0" prefWidth="400.0" styleClass="anchorPanes" stylesheets="@color.css">
+                  <AnchorPane prefHeight="50.0" prefWidth="400.0" styleClass="anchorPanes" stylesheets="@style.css" GridPane.rowIndex="2">
                      <children>
                         <Text layoutX="14.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Jenis :">
                            <font>
                               <Font size="15.0" />
                            </font>
                         </Text>
-                        <Text layoutX="76.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                        <Text fx:id="subCategory" layoutX="76.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
                            <font>
                               <Font size="15.0" />
                            </font>
                         </Text>
                      </children>
-                     <VBox.margin>
-                        <Insets left="400.0" right="400.0" />
-                     </VBox.margin>
                   </AnchorPane>
-                  <AnchorPane prefHeight="300.0" prefWidth="400.0" styleClass="anchorPanes" stylesheets="@color.css">
+                  <AnchorPane prefHeight="300.0" prefWidth="400.0" styleClass="anchorPanes" stylesheets="@style.css" GridPane.rowIndex="3">
                      <children>
                         <Text layoutX="14.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Karakterisik :">
                            <font>
@@ -68,15 +67,20 @@
                         </Text>
                         <ScrollPane hbarPolicy="NEVER" layoutY="50.0" prefHeight="250.0" prefWidth="400.0">
                           <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="500.0" prefWidth="400.0" />
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="500.0" prefWidth="400.0">
+                                 <children>
+                                    <Text fx:id="characteristics" layoutX="52.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="JUSTIFY" wrappingWidth="292.3375549316406" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Text>
+                                 </children>
+                              </AnchorPane>
                           </content>
                         </ScrollPane>
                      </children>
-                     <VBox.margin>
-                        <Insets left="400.0" right="400.0" />
-                     </VBox.margin>
                   </AnchorPane>
-                  <AnchorPane layoutX="410.0" layoutY="320.0" prefHeight="300.0" prefWidth="400.0" styleClass="anchorPanes" stylesheets="@color.css">
+                  <AnchorPane prefHeight="300.0" prefWidth="400.0" styleClass="anchorPanes" stylesheets="@style.css" GridPane.rowIndex="4">
                      <children>
                         <Text layoutX="14.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Deskripsi :">
                            <font>
@@ -85,15 +89,20 @@
                         </Text>
                         <ScrollPane hbarPolicy="NEVER" layoutY="50.0" prefHeight="250.0" prefWidth="400.0">
                            <content>
-                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="500.0" prefWidth="400.0" />
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="500.0" prefWidth="400.0">
+                                 <children>
+                                    <Text fx:id="description" layoutX="60.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="JUSTIFY" wrappingWidth="292.3375549316406" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Text>
+                                 </children>
+                              </AnchorPane>
                            </content>
                         </ScrollPane>
                      </children>
-                     <VBox.margin>
-                        <Insets left="400.0" right="400.0" />
-                     </VBox.margin>
                   </AnchorPane>
-                  <AnchorPane prefHeight="179.0" prefWidth="400.0" styleClass="anchorPanes" stylesheets="@color.css">
+                  <AnchorPane prefHeight="179.0" prefWidth="400.0" styleClass="anchorPanes" stylesheets="@style.css" GridPane.rowIndex="5">
                      <children>
                         <Text layoutX="14.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sumber Referensi :">
                            <font>
@@ -102,17 +111,19 @@
                         </Text>
                         <SVGPath content="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z" layoutX="21.0" layoutY="48.0" scaleX="2.0" scaleY="2.0" />
                         <SVGPath content="M15.545 6.558a9.4 9.4 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.7 7.7 0 0 1 5.352 2.082l-2.284 2.284A4.35 4.35 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.8 4.8 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.7 3.7 0 0 0 1.599-2.431H8v-3.08z" layoutX="21.0" layoutY="90.0" scaleX="2.0" scaleY="2.0" />
-                        <SVGPath content="M5 0h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2 2 2 0 0 1-2 2H3a2 2 0 0 1-2-2h1a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1H1a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v9a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1H3a2 2 0 0 1 2-2 M1 6v-.5a.5.5 0 0 1 1 0V6h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0V9h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 2.5v.5H.5a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1H2v-.5a.5.5 0 0 0-1 0" layoutX="21.0" layoutY="134.0" scaleX="2.0" scaleY="2.0" />
-                        <Hyperlink layoutX="76.0" layoutY="44.0" text="Hyperlink" />
-                        <Hyperlink layoutX="76.0" layoutY="86.0" text="Hyperlink" />
-                        <Hyperlink layoutX="76.0" layoutY="131.0" text="Hyperlink" />
+                        <SVGPath content="M16 8a8 8 0 0 1-7.022 7.94l1.902-7.098a3 3 0 0 0 .05-1.492A3 3 0 0 0 10.237 6h5.511A8 8 0 0 1 16 8M0 8a8 8 0 0 0 7.927 8l1.426-5.321a3 3 0 0 1-.723.255 3 3 0 0 1-1.743-.147 3 3 0 0 1-1.043-.7L.633 4.876A8 8 0 0 0 0 8m5.004-.167L1.108 3.936A8.003 8.003 0 0 1 15.418 5H8.066a3 3 0 0 0-1.252.243 2.99 2.99 0 0 0-1.81 2.59M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4" layoutX="21.0" layoutY="134.0" scaleX="2.0" scaleY="2.0" />
+                        <Hyperlink fx:id="youtubeLink" layoutX="76.0" layoutY="44.0" onAction="#goToYoutube" text="Hyperlink" />
+                        <Hyperlink fx:id="googleLink" layoutX="76.0" layoutY="86.0" onAction="#goToGoogleScholar" text="Hyperlink" />
+                        <Hyperlink fx:id="webLink" layoutX="76.0" layoutY="131.0" onAction="#goToWebsite" text="Hyperlink" />
                      </children>
-                     <VBox.margin>
-                        <Insets left="400.0" right="400.0" />
-                     </VBox.margin>
                   </AnchorPane>
                </children>
-            </VBox>
+            </GridPane>
+            <Button fx:id="bookmark" layoutX="1094.0" layoutY="26.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" stylesheets="@style.css">
+               <graphic>
+                  <SVGPath content="M6 1h6v7a.5.5 0 0 1-.757.429L9 7.083 6.757 8.43A.5.5 0 0 1 6 8z M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2 M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1z" scaleX="2.0" scaleY="2.0" />
+               </graphic>
+            </Button>
          </children></AnchorPane>
   </content>
 </ScrollPane>
