--- a/DrStone-main/src/main/resources/view/stone-view.fxml
+++ b/DrStone-main/src/main/resources/view/stone-view.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -119,11 +120,36 @@
                   </AnchorPane>
                </children>
             </GridPane>
-            <Button fx:id="bookmark" layoutX="1094.0" layoutY="26.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" stylesheets="@style.css">
+            <Button fx:id="bookmark" layoutX="1094.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#bookmarkPage" prefHeight="60.0" prefWidth="60.0" stylesheets="@style.css">
                <graphic>
                   <SVGPath content="M6 1h6v7a.5.5 0 0 1-.757.429L9 7.083 6.757 8.43A.5.5 0 0 1 6 8z M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2 M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1z" scaleX="2.0" scaleY="2.0" />
                </graphic>
             </Button>
+            <AnchorPane fx:id="dialogBox" layoutX="861.0" layoutY="97.0" prefHeight="131.0" prefWidth="300.0" styleClass="anchorPanes" stylesheets="@style.css" visible="false">
+               <children>
+                  <Text layoutX="14.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nama : ">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Text>
+                  <TextField fx:id="bookmarkName" layoutX="75.0" layoutY="30.0" prefHeight="25.0" prefWidth="200.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </TextField>
+                  <Button fx:id="saveButton" layoutX="195.0" layoutY="85.0" mnemonicParsing="false" onAction="#saveBookmark" prefHeight="30.0" prefWidth="80.0" text="Simpan">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="cancelButton" layoutX="95.0" layoutY="85.0" mnemonicParsing="false" onAction="#closeDialogBox" prefHeight="30.0" prefWidth="80.0" text="Batal">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+               </children>
+            </AnchorPane>
+            <Button fx:id="backButton" layoutX="81.0" layoutY="56.0" mnemonicParsing="false" onAction="#backToLearningMenu" text="Back" />
          </children></AnchorPane>
   </content>
 </ScrollPane>
